# xf86-video-virgl

./: Makefile.am  configure.ac
src/: Makefile.am  virgl.h  virgl_dri2.c  virgl_drmmode.c  virgl_drmmode.h  virgl_kms.c  virgl_surface.c  virgl_uxa.c
